Fixed form captcha img spacing.

--- a/sass/components/_contact-form.scss
+++ b/sass/components/_contact-form.scss
@@ -35,9 +35,9 @@
     &:visited {
       color: white;
     }
+  }
 
-    img {
-      margin-bottom: 10px;
-    }
+  .wpcf7-captchac {
+    margin-bottom: 10px;
   }
 }
